Bug 433854 Crash [@ nsDependentCString::nsDependentCString][@ nsImapService::StreamMessage]. r/sr=Neil